# sanskrit

./: .gitignore  README.md  __main__.py  main.py  project-instructions.md  pyproject.toml  requirements.txt
audio/references/: .gitkeep
audio/user_recordings/: .gitkeep
core/: audio_processor.py  evaluator.py  phoneme_aligner.py
mantras/: ganesha_name_1.json  gayatri_mantra.json
reports/: .gitkeep
sanskrit_mantra_coach/: README.md  __init__.py  __main__.py  config.py  main.py  requirements.txt
sanskrit_mantra_coach/core/: __init__.py  audio_processor.py  evaluator.py  feedback_generator.py  phoneme_aligner.py
sanskrit_mantra_coach/utils/: __init__.py  helpers.py  visualizations.py
